Deploy gh-pages from commit d32e43e468833d7f0086fcfb081e3d549da4490b

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     
-<meta name="ams/config/environment" content="%7B%22modulePrefix%22%3A%22ams%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22%2Fams%2F%22%2C%22locationType%22%3A%22history%22%2C%22EmberENV%22%3A%7B%22EXTEND_PROTOTYPES%22%3Afalse%2C%22FEATURES%22%3A%7B%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_DEFAULT_ASYNC_OBSERVERS%22%3Atrue%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22ams%22%2C%22version%22%3A%220.0.0%2B19bc8bb4%22%7D%2C%22googleFonts%22%3A%5B%22Source%2BSans%2BPro%3A300%2C400%2C600%2C700%22%2C%22Roboto%3A300%2C400%2C500%2C700%22%5D%2C%22contentSecurityPolicy%22%3A%7B%22font-src%22%3A%22'self'%20fonts.gstatic.com%22%2C%22style-src%22%3A%22'self'%20fonts.googleapis.com%22%7D%2C%22ember-body-class%22%3A%7B%22includeRouteName%22%3Afalse%7D%7D" />
+<meta name="ams/config/environment" content="%7B%22modulePrefix%22%3A%22ams%22%2C%22environment%22%3A%22production%22%2C%22rootURL%22%3A%22%2F%22%2C%22locationType%22%3A%22history%22%2C%22EmberENV%22%3A%7B%22EXTEND_PROTOTYPES%22%3Afalse%2C%22FEATURES%22%3A%7B%7D%2C%22_APPLICATION_TEMPLATE_WRAPPER%22%3Afalse%2C%22_DEFAULT_ASYNC_OBSERVERS%22%3Atrue%2C%22_JQUERY_INTEGRATION%22%3Afalse%2C%22_TEMPLATE_ONLY_GLIMMER_COMPONENTS%22%3Atrue%7D%2C%22APP%22%3A%7B%22name%22%3A%22ams%22%2C%22version%22%3A%220.0.0%2Bd32e43e4%22%7D%2C%22googleFonts%22%3A%5B%22Source%2BSans%2BPro%3A300%2C400%2C600%2C700%22%2C%22Roboto%3A300%2C400%2C500%2C700%22%5D%2C%22contentSecurityPolicy%22%3A%7B%22font-src%22%3A%22'self'%20fonts.gstatic.com%22%2C%22style-src%22%3A%22'self'%20fonts.googleapis.com%22%7D%2C%22ember-body-class%22%3A%7B%22includeRouteName%22%3Afalse%7D%7D" />
 <!-- EMBER_CLI_FASTBOOT_TITLE -->  <meta name="ember-cli-head-start" content><!----><meta name="ember-cli-head-end" content>
 
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700|Roboto:300,400,500,700" rel="stylesheet" type="text/css" media="all">
 
-    <link integrity="" rel="stylesheet" href="/ams/assets/vendor-93dedd451fcac5e3ec47641feea2584b.css">
-    <link integrity="" rel="stylesheet" href="/ams/assets/ams-8ce4e6514e6d42b978886cf305d6f709.css">
+    <link integrity="" rel="stylesheet" href="/assets/vendor-93dedd451fcac5e3ec47641feea2584b.css">
+    <link integrity="" rel="stylesheet" href="/assets/ams-8ce4e6514e6d42b978886cf305d6f709.css">
 
     
   </head>
@@ -956,10 +956,10 @@
 
 <script type="x/boundary" id="fastboot-body-end"></script>
 
-    <script src="/ams/assets/vendor-1cbd5ec496b986778cf2d5b0f88a5a3f.js"></script>
-<script src="/ams/assets/chunk.656.b2177bc326882af69fb2.js"></script>
-<script src="/ams/assets/chunk.143.80522678d31a0fa037cf.js"></script>
-    <script src="/ams/assets/ams-3e965a41392bc9bc06e3f6df11abfa99.js"></script>
+    <script src="/assets/vendor-1cbd5ec496b986778cf2d5b0f88a5a3f.js" integrity="sha256-X6SF5wbKpYUMq19xSItrN5ggKcIUqcIsOoqNwq+p+Ag= sha512-RVxJy5WvvnBj4rgEuxex8lPjcACM+plKVFASXpnOxQeq6dET6VM4PVGgGXiezmfi+yt7adZTMNjG4adpP2Earw==" ></script>
+<script src="/assets/chunk.656.b2177bc326882af69fb2.js" integrity="sha256-c7JclC8s2GHmXNcfu712+bUEh7yuT2kztptG7H354DY= sha512-m30WEe7nGU/5hT7LYiwviE/aHIgFJQ1EN1yHtA8Km7qb9bHT7OSJtJ85gZ1lJxSd8LfYPlNJ843QJsYmuGsTXw==" ></script>
+<script src="/assets/chunk.143.9031a0811793b3e8265f.js" integrity="sha256-zNIfnW25X1wLS4u0XMvZXRA3UxXO6WACEjEUOt1uaog= sha512-UDIAYM9t1S4I5me9hxY9rD6Tfj5CZulb+hSV/a/T4vTBuT1SOisjn48kVQgbrj4xgNqDjjgTfZf9GPjFxAr/LA==" ></script>
+    <script src="/assets/ams-f9c154c909a78aaa12eec214a58194b2.js" integrity="sha256-2fr5nf6CYNltaPMuEXu8oMINKRezMH0cZ0QwuIXkdLE= sha512-0zPUiZU8AJWxKLuQu3i4C++N8khwwUigE1V3igVcUplf2ncXVmMnCZjgkGdtkaf5EjJpNiWCepo2wT4Ej5JENg==" ></script>
 
     <div id="ember-bootstrap-wormhole"></div>
   </body>
